// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PatientsSummary /> should renders with Disclaimer Modal correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary panel-dashboard"
      >
        <PatientsSummaryListHeader
          feeds={
            Array [
              Object {
                "landingPageUrl": "https://www.nytimes.com/section/health",
                "name": "NYTimes.com",
                "rssFeedUrl": "http://rss.nytimes.com/services/xml/rss/nyt/Health.xml",
                "sourceId": "testSourceID6",
              },
              Object {
                "landingPageUrl": "http://www.bbc.co.uk/news/health",
                "name": "BBC Health",
                "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
                "sourceId": "testSourceID1",
              },
              Object {
                "landingPageUrl": "https://www.nhs.uk/news/",
                "name": "NHS Choices",
                "rssFeedUrl": "https://www.nhs.uk/NHSChoices/shared/RSSFeedGenerator/RSSFeed.aspx?site=News",
                "sourceId": "testSourceID2",
              },
              Object {
                "landingPageUrl": "https://www.gov.uk/government/organisations/public-health-england",
                "name": "Public Health",
                "rssFeedUrl": "https://www.gov.uk/government/organisations/public-health-england.atom",
                "sourceId": "testSourceID3",
              },
              Object {
                "landingPageUrl": "https://www.leeds-live.co.uk/best-in-leeds/whats-on-news/",
                "name": "Leeds Live - Whats on",
                "rssFeedUrl": "https://www.leeds-live.co.uk/best-in-leeds/whats-on-news/?service=rss",
                "sourceId": "testSourceID4",
              },
              Object {
                "landingPageUrl": "https://news.leeds.gov.uk",
                "name": "Leeds CC Local News",
                "rssFeedUrl": "https://news.leeds.gov.uk/tagfeed/en/tags/Leeds-news",
                "sourceId": "testSourceID5",
              },
            ]
          }
          onCategorySelected={[Function]}
          onViewOfBoardsSelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
              "topThreeThings": true,
              "vaccinations": true,
            }
          }
          selectedViewOfBoards={
            Object {
              "full": true,
              "list": false,
              "preview": false,
            }
          }
          title="Home"
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              srcPrevirew="problems.jpg"
              state="diagnoses"
              title="Problems / Diagnosis"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              srcPrevirew="contacts.jpg"
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              srcPrevirew="allergies.jpg"
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              srcPrevirew="medications.jpg"
              state="medications"
              title="Medications"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="4"
              srcPrevirew="vaccinations.jpg"
              state="vaccinations"
              title="Vaccinations"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="5"
              srcPrevirew="top3.jpg"
              state="topThreeThings"
              title="Top 3 Things"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
  <ConfirmationModal
    isShow={true}
    isShowCancelButton={false}
    isShowOkButton={true}
    onHide={[Function]}
    onOk={[Function]}
    textCancelButton="Cancel"
    textOkButton="Ok"
    title="Notification"
  >
    <span>
      You was redirected to your home page because you are logged in as a PHR user.
    </span>
  </ConfirmationModal>
</section>
`;

exports[`Component <PatientsSummary /> should renders with all props correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary panel-dashboard"
      >
        <PatientsSummaryListHeader
          feeds={
            Array [
              Object {
                "landingPageUrl": "https://www.nytimes.com/section/health",
                "name": "NYTimes.com",
                "rssFeedUrl": "http://rss.nytimes.com/services/xml/rss/nyt/Health.xml",
                "sourceId": "testSourceID6",
              },
              Object {
                "landingPageUrl": "http://www.bbc.co.uk/news/health",
                "name": "BBC Health",
                "rssFeedUrl": "http://feeds.bbci.co.uk/news/health/rss.xml?edition=uk#",
                "sourceId": "testSourceID1",
              },
              Object {
                "landingPageUrl": "https://www.nhs.uk/news/",
                "name": "NHS Choices",
                "rssFeedUrl": "https://www.nhs.uk/NHSChoices/shared/RSSFeedGenerator/RSSFeed.aspx?site=News",
                "sourceId": "testSourceID2",
              },
              Object {
                "landingPageUrl": "https://www.gov.uk/government/organisations/public-health-england",
                "name": "Public Health",
                "rssFeedUrl": "https://www.gov.uk/government/organisations/public-health-england.atom",
                "sourceId": "testSourceID3",
              },
              Object {
                "landingPageUrl": "https://www.leeds-live.co.uk/best-in-leeds/whats-on-news/",
                "name": "Leeds Live - Whats on",
                "rssFeedUrl": "https://www.leeds-live.co.uk/best-in-leeds/whats-on-news/?service=rss",
                "sourceId": "testSourceID4",
              },
              Object {
                "landingPageUrl": "https://news.leeds.gov.uk",
                "name": "Leeds CC Local News",
                "rssFeedUrl": "https://news.leeds.gov.uk/tagfeed/en/tags/Leeds-news",
                "sourceId": "testSourceID5",
              },
            ]
          }
          onCategorySelected={[Function]}
          onViewOfBoardsSelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
              "topThreeThings": true,
              "vaccinations": true,
            }
          }
          selectedViewOfBoards={
            Object {
              "full": true,
              "list": false,
              "preview": false,
            }
          }
          title="Home"
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              srcPrevirew="problems.jpg"
              state="diagnoses"
              title="Problems / Diagnosis"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              srcPrevirew="contacts.jpg"
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              srcPrevirew="allergies.jpg"
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              srcPrevirew="medications.jpg"
              state="medications"
              title="Medications"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="4"
              srcPrevirew="vaccinations.jpg"
              state="vaccinations"
              title="Vaccinations"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="5"
              srcPrevirew="top3.jpg"
              state="topThreeThings"
              title="Top 3 Things"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
</section>
`;
